hasta acá funciona todo lo relacionado a arenas (1.0.2-beta)