@@ -1,8 +1,9 @@
 package us.polarismc.polarisduels.arenas.commands;
 
-import io.papermc.paper.event.player.AsyncChatEvent;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.TextComponent;
+import org.bukkit.Bukkit;
+import org.bukkit.Location;
+import org.bukkit.World;
+import org.bukkit.WorldCreator;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
@@ -10,14 +11,15 @@ import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
+import org.bukkit.event.player.PlayerChatEvent;
 import org.bukkit.event.player.PlayerInteractEvent;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 import us.polarismc.polarisduels.Main;
 import us.polarismc.polarisduels.arenas.entity.ArenaEntity;
 import us.polarismc.polarisduels.arenas.session.ArenaSetupSession;
 import us.polarismc.polarisduels.arenas.states.InactiveArenaState;
 
+import java.io.*;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -73,6 +75,29 @@ public class ArenaCommands implements Listener, CommandExecutor, TabCompleter {
                     sender.sendMessage(plugin.utils.chat("&cArena with the name &4" + arenaName + " &cdoes not exists"));
                 }
                 return true;
+            } else if (args[0].equalsIgnoreCase("clone")) {
+                if (args.length < 3) {
+                    sender.sendMessage(plugin.utils.chat("&cUse: /arena clone <arena> <cantidad>"));
+                    return true;
+                }
+
+                String arenaName = args[1];
+                int copies;
+
+                try {
+                    copies = Integer.parseInt(args[2]);
+                } catch (NumberFormatException e) {
+                    sender.sendMessage(plugin.utils.chat("&cAmount must be a number."));
+                    return true;
+                }
+
+                boolean success = cloneArena(arenaName, copies);
+                if (success) {
+                    sender.sendMessage(plugin.utils.chat("&#10e8f3Arena '" + arenaName + "' cloned " + copies + " times."));
+                } else {
+                    sender.sendMessage(plugin.utils.chat("&cAn exception happened while cloning the arenas."));
+                }
+                return true;
             } else {
                 sender.sendMessage(plugin.utils.chat("&cArena usage -> /arena [setup/delete]"));
                 return true;
@@ -105,28 +130,29 @@ public class ArenaCommands implements Listener, CommandExecutor, TabCompleter {
      * @param e event
      */
     @EventHandler
-    public void onPlayerChat(AsyncChatEvent e) {
+    public void onPlayerChat(PlayerChatEvent e) {
         Player p = e.getPlayer();
         if (!setupSessions.containsKey(p.getUniqueId())) return;
 
         ArenaSetupSession session = setupSessions.get(p.getUniqueId());
         e.setCancelled(true);
 
-        Component message = e.message();
-        String m = ((TextComponent) message).content();
+        String m = e.getMessage();
         switch (session.getStep()) {
             case 1 -> {
-                session.getArena().setName(m);
+                session.getArena().setName(m.toLowerCase());
                 session.setStep(2);
                 plugin.utils.message(p, "&#10e8f3Step 2: Please enter the Display Name of the arena");
             }
             case 2 -> {
                 session.getArena().setDisplayName(m);
+                World world = plugin.utils.createVoidWorld(session.getArena().getName());
+                p.teleportAsync(new Location(world, 0.5, 65, 0.5));
                 session.setStep(3);
                 plugin.utils.message(p, "&#10e8f3Step 3: Please stand on the spawn point 1 and say 'loc1' to save");
             }
             case 3 -> {
-                if (message.equals(Component.text("loc1"))) {
+                if (m.equalsIgnoreCase("loc1")) {
                     session.getArena().setSpawnOne(p.getLocation());
                     session.setStep(4);
                     plugin.utils.message(p, "&#10e8f3Step 4: Please stand on the spawn point 2 and say 'loc2' to save");
@@ -135,7 +161,7 @@ public class ArenaCommands implements Listener, CommandExecutor, TabCompleter {
                 }
             }
             case 4 -> {
-                if (message.equals(Component.text("loc2"))) {
+                if (m.equalsIgnoreCase("loc2")) {
                     session.getArena().setSpawnTwo(p.getLocation());
                     session.setStep(5);
                     plugin.utils.message(p, "&#10e8f3Step 5: Please stand on the first corner and say 'corner1' to save");
@@ -144,7 +170,7 @@ public class ArenaCommands implements Listener, CommandExecutor, TabCompleter {
                 }
             }
             case 5 -> {
-                if (message.equals(Component.text("corner1"))) {
+                if (m.equalsIgnoreCase("corner1")) {
                     session.getArena().setCornerOne(p.getLocation());
                     session.setStep(6);
                     plugin.utils.message(p, "&#10e8f3Step 6: Please stand on the second corner and say 'corner2' to save");
@@ -153,7 +179,7 @@ public class ArenaCommands implements Listener, CommandExecutor, TabCompleter {
                 }
             }
             case 6 -> {
-                if (message.equals(Component.text("corner2"))) {
+                if (m.equalsIgnoreCase("corner2")) {
                     session.getArena().setCornerTwo(p.getLocation());
                     session.setStep(7);
                     plugin.utils.message(p, "&#10e8f3Step 7: Please place an item in your hand for the Arena Logo and say 'go'");
@@ -162,7 +188,7 @@ public class ArenaCommands implements Listener, CommandExecutor, TabCompleter {
                 }
             }
             case 7 -> {
-                if (message.equals(Component.text("go")) && !p.getInventory().getItemInMainHand().getType().isAir()) {
+                if (m.equalsIgnoreCase("go") && !p.getInventory().getItemInMainHand().getType().isAir()) {
                     session.getArena().setBlockLogo(p.getInventory().getItemInMainHand());
                     session.setStep(8);
                     plugin.utils.message(p, "&#10e8f3Step 8: Please select the center of the arena by right-clicking");
@@ -188,7 +214,7 @@ public class ArenaCommands implements Listener, CommandExecutor, TabCompleter {
         if (session.getStep() == 8) {
             if (e.getClickedBlock() == null) return;
             session.getArena().setCenter(e.getClickedBlock().getLocation());
-            session.setStep(6);
+            session.setStep(9);
             session.getArena().setArenaState(new InactiveArenaState());
             plugin.getArenaManager().arenas.add(session.getArena());
             plugin.utils.message(p, "&#FFC300Arena setup completed!");
@@ -199,17 +225,119 @@ public class ArenaCommands implements Listener, CommandExecutor, TabCompleter {
         }
     }
 
+    public boolean cloneArena(String originalName, int copies) {
+        Optional<ArenaEntity> originalArenaOpt = plugin.getArenaManager().arenas.stream()
+                .filter(arena -> arena.getName().equalsIgnoreCase(originalName))
+                .findFirst();
+
+        if (originalArenaOpt.isEmpty()) {
+            return false;
+        }
+
+        ArenaEntity originalArena = originalArenaOpt.get();
+        World source = originalArena.getCenter().getWorld();
+        if (source == null) return false;
+        
+        File oldFolder = new File(Bukkit.getWorldContainer(), originalArena.getName());
+        if (!oldFolder.exists()) return false;
+
+        int createdCount = 0;
+
+        for (int i = 2; createdCount < copies; i++) {
+            String newArenaName = originalArena.getName() + i;
+            File newFolder = new File(Bukkit.getWorldContainer(), newArenaName);
+
+            if (newFolder.exists()) continue;
+
+            // Copia el mundo y lo carga
+            copyWorld(oldFolder, newFolder);
+            
+            // Copia las propiedades de la arena y las guarda
+            plugin.getArenaManager().arenaFile.loadArenaWorlds();
+            ArenaEntity newArena = cloneArenaProperties(newArenaName, originalArena);
+            plugin.getArenaManager().arenas.add(newArena);
+            plugin.getArenaManager().arenaFile.saveArenas(plugin.getArenaManager().arenas);
+
+            plugin.utils.broadcast("&#10e8f3Arena '" + newArena.getDisplayName() + "' ('" + newArenaName + "') created successfully! (" + (createdCount + 1) + "/" + copies + ")");
+
+            createdCount++;
+        }
+        return true;
+    }
+
+    public void copyWorld(File source, File target){
+        try {
+            ArrayList<String> ignore = new ArrayList<>(Arrays.asList("uid.dat", "session.lock"));
+            if(!ignore.contains(source.getName())) {
+                if (source.isDirectory()) {
+                    if (!target.exists()) {
+                        if (!target.mkdirs()) {
+                            plugin.getLogger().severe("Error cloning folders. Source: " + source + " /-/ Target: " + target);
+                        }
+                    }
+                    String[] files = source.list();
+                    assert files != null;
+                    for (String file : files) {
+                        File srcFile = new File(source, file);
+                        File destFile = new File(target, file);
+                        copyWorld(srcFile, destFile);
+                    }
+                } else {
+                    InputStream in = new FileInputStream(source);
+                    OutputStream out = new FileOutputStream(target);
+                    byte[] buffer = new byte[1024];
+                    int length;
+                    while ((length = in.read(buffer)) > 0)
+                        out.write(buffer, 0, length);
+                    in.close();
+                    out.close();
+                }
+            }
+        } catch (IOException e) {
+            plugin.getLogger().severe("Error cloning folders: " + e.getMessage());
+        }
+    }
+
+    private static @NotNull ArenaEntity cloneArenaProperties(String newArenaName, ArenaEntity originalArena) {
+        ArenaEntity newArena = new ArenaEntity();
+        newArena.setName(newArenaName);
+        newArena.setDisplayName(originalArena.getDisplayName());
+
+        Location spawnOne = originalArena.getSpawnOne().clone();
+        Location spawnTwo = originalArena.getSpawnTwo().clone();
+        Location cornerOne = originalArena.getCornerOne().clone();
+        Location cornerTwo = originalArena.getCornerTwo().clone();
+        Location center = originalArena.getCenter().clone();
+        
+        World world = Bukkit.getWorld(newArenaName);
+
+        spawnOne.setWorld(world); spawnTwo.setWorld(world); cornerOne.setWorld(world); cornerTwo.setWorld(world); center.setWorld(world);
+        newArena.setSpawnOne(spawnOne); newArena.setSpawnTwo(spawnTwo); newArena.setCornerOne(cornerOne); newArena.setCornerTwo(cornerTwo); newArena.setCenter(center);
+
+        newArena.setBlockLogo(originalArena.getBlockLogo());
+        newArena.setArenaState(new InactiveArenaState());
+
+        return newArena;
+    }
+
     @Override
-    public @Nullable List<String> onTabComplete(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String s, @NotNull String @NotNull [] args) {
+    public List<String> onTabComplete(@NotNull CommandSender sender, Command command, @NotNull String alias, String @NotNull [] args) {
+        List<String> completions = new ArrayList<>();
+
         if (command.getName().equalsIgnoreCase("arena")) {
             if (args.length == 1) {
-                return Arrays.asList("setup", "delete");
-            } else if (args.length == 2 && args[0].equalsIgnoreCase("delete") && !plugin.getArenaManager().getArenas().isEmpty()) {
-                return plugin.getArenaManager().getArenas().stream()
-                        .map(ArenaEntity::getName)
-                        .collect(Collectors.toList());
+                completions.addAll(Arrays.asList("setup", "delete", "clone"));
+            } else if (args.length == 2) {
+                if (args[0].equalsIgnoreCase("delete") || args[0].equalsIgnoreCase("clone")) {
+                    completions.addAll(plugin.getArenaManager().getArenas().stream()
+                            .map(ArenaEntity::getName)
+                            .toList());
+                }
+            } else if (args.length == 3 && args[0].equalsIgnoreCase("clone")) {
+                completions.addAll(Arrays.asList("1", "3", "5", "10", "25", "50"));
             }
         }
-        return null;
+
+        return completions.stream().filter(s -> s.toLowerCase().startsWith(args[args.length - 1].toLowerCase())).sorted().collect(Collectors.toList());
     }
 }
